- Added dispatch_slug_path.
0.2.17 2018-12-17
- PageTitlesMixin: Slimdown name for get_short_title.
- Daytime utils.
- Debugging utils.
- Load correct translations tags in language switcher fragment.

0.2.16 2018-11-21
- Improved get_runtime_display.

0.2.15 2018-11-21
- Respect USE_TRANSLATABLE_FIELDS setting.
- view_helpers template tags.

0.2.14 2018-11-15
- lang parameter for time_format, date_format
- _text_list.html without unnecessary whitespace
- Separated fields from methods in RuntimeMixin

0.2.13 2018-10-13
- Improved USE_TRANSLATABLE_FIELDS
- Option to allow empty runtimes (without even a start date)
- SlugTreeMixin: Check `has_url` and `parent` fields, too
- PageTitlesMixin: Renamed `short_title`-field to `name`

0.2.12 2018-09-28
- Additional text template tags.

0.2.11 2018-09-27
- RichTextBase has no longer StyleMixin as default.

0.2.10 2018-09-27
- Fix in PageTitlesFunctionMixin

0.2.8 2018-09-21
- get_admin_url in debug_utils

0.2.7 2018-09-04
- Make sure the slug field is never empty.
- Allow function in AutoSlugfield populate_from.

0.2.6
- Added missing requirement for django-dirtyfields

0.2.5
- Improved slug functions, slug fields (DowngradingSlugField).
- Move location of SLUG_HELP, DEFAULT_SLUG and AutoSlugField, now in shared.utils.models.slugs.
- Added SlugTreeMixin and helper signal functions.
- __str__ function for PageTitlesMixin

0.2.4
- Added RuntimeMixin.

0.2.3
- Added PageTitlesFunctionMixin.