@@ -1,0 +1,30 @@
+{% extends "admin/change_form.html" %}{# Needed for admin javascripts #}
+{% load i18n static %}
+
+
+{% block title %}{{ title }}{% endblock %}
+
+
+{% block content %}
+	<div id="content-main">
+		<form action="" method="post">{% csrf_token %}
+			<div>
+				{{ action_form.as_p }}
+				{% for obj in queryset %}
+				<input type="hidden" name="_selected_action" value="{{ obj.id }}">
+				{% endfor %}
+
+				<p>{{ queryset_action_label }}</p>
+
+				<ul>
+					{{ queryset|unordered_list }}
+				</ul>
+
+				<input type="hidden" name="action" value="{{ action_name }}">
+				<input type="submit" name="apply" value="{{ action_button_label }}">
+				<input class="button cancel-link" type="submit" name="cancel" value="{% trans "Cancel" %}">
+				{# <a href="#" class="button cancel-link">{% trans "No, take me back" %}</a> #}
+			</div>
+		</form>
+	</div>
+{% endblock %}
