@@ -1,4 +1,6 @@
 - Added dispatch_slug_path.
+- Added AdminActionBase.
+
 0.2.17 2018-12-17
 - PageTitlesMixin: Slimdown name for get_short_title.
 - Daytime utils.
